--- a/djangochat/core/templates/core/base.html
+++ b/djangochat/core/templates/core/base.html
@@ -10,7 +10,22 @@
     </head>
 
     <body class="bg-teal-600">
-        Djangochat
+        <nav class="flex items-center justify-between px-4 py-6 bg-teal-800">
+            <div>
+                <a href="/" class="text-xl text-white">Djangochat</a>
+            </div>
 
+            <div class="flex items-center space-x-4">
+                
+                    <a href="/rooms/" class="text-white hover:text-gray-200">Rooms</a>
+
+                    <a href="/logout/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Log out</a>
+                
+                    <a href="/login/" class="text-white hover:text-gray-200">Log in</a>
+            
+                    <a href="/signup/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Sign up</a>
+                
+            </div>
+        </nav>
     </body>
 </html>
