--- a/djangochat/core/templates/core/base.html
+++ b/djangochat/core/templates/core/base.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1">
         
-        <title>Djangochat</title>
+        <title>{% block title %}{% endblock title %}Djangochat</title>
 
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
@@ -27,5 +27,8 @@
                 
             </div>
         </nav>
+
+        {% block content %}
+        {% endblock content %}
     </body>
 </html>
